--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 body {
   padding: 1em 3em;
 }
+form#searchform label {
+  display: block;
+}
+form#searchform input#searchField {
+  max-width: 900px;
+  margin-right: 1em;
+}
